example for ajax request

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
 <link rel="stylesheet" href="/src/css/main.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     </head>
     <body>
 
@@ -18,6 +19,10 @@
 
 <div id="myComponent">
     <test></test>
+</div>
+
+<div id="example_test">
+    <my-compnent></my-compnent>
 </div>
 
         <script src="/src/vender/vue.js"></script>
