--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
 </div>
 
 <div id="app">
-    <component-object2 name="da" :age="18" :schools="{name: 'my school', location: 'california', books: [{title: 'hi'}, {title: 'yo'}]}" :readBooks="[{book:'my lady'}, {book:'your dream!'}]"></component-object2>
+    <component-object2 name="da" 
+    :age="18" 
+    :schools="{name: 'my school', location: 'california', books: [{title: 'hi'}, {title: 'yo'}, {title: 'the books'}]}" 
+    :readBooks="[{book:'my lady'}, {book:'your dream!'}]"></component-object2>
+
+
+    <c-pokemons></c-pokemons>
 </div>
 
         <script src="/src/vender/vue.js"></script>
