--- a/index.html
+++ b/index.html
@@ -38,11 +38,14 @@
     :schools="{name: 'my school', location: 'california', books: [{title: 'hi'}, {title: 'yo'}, {title: 'the books'}]}" 
     :readBooks="[{book:'my lady'}, {book:'your dream!'}]"></component-object2>
 
-
     <c-pokemons></c-pokemons>
 </div>
 
+<div id="button_controls">
+</div>
+
         <script src="/src/vender/vue.js"></script>
+         <script src="/src/js/global.js"></script>
          <script src="/src/js/main.js"></script>
     </body>
 </html>
